language/move-lang/tests/move_check/parser/function_incomplete.exp
error: 

   ┌── tests/move_check/parser/function_incomplete.move:3:1 ───
   │
 3 │ 
   │ ^ Unrecognized Token: 
   ·
 3 │ 
   │ - Expected:  "move", "copy", "break", "continue", "[Name]", "[Name<Types>]", "[Address]", "true", "false", "[U64]", "(", "{", "::"
   │

